@@ -1,6 +1,10 @@
 Package triangulation: provides triangulations Delaunay triangulations, 
 constrained and regular triangulations with  tests and examples.
 
+7 September 2004 Menelaos Karavelas
+- re-added commented code in join_vertices that was referring to degree
+  2 vertices
+
 6 September 2004 Menelaos Karavelas
 - Documentation: moved join and split methods from the concept TDS_2 to the
   model of T_d_s_2
